# python-avada-scraper

./: .gitignore  pyproject.toml  scrapy_laptops.py
